insar notebook image

--- a/notebooks/01_OPERA_phase_unwrap.ipynb
+++ b/notebooks/01_OPERA_phase_unwrap.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "**Interferometric Synthetic Aperture Radar (InSAR)** is a remote sensing technique that measures surface displacement by analyzing the phase difference between two radar images of the same area. These images are collected at different times using radar sensors on satellites. The fundamental idea behind InSAR is that the phase difference between corresponding pixels in two SAR images contains information about the movement of the Earth's surface in the line-of-sight direction of the radar sensor.\n",
     "\n",
-    "![InSAR Diagram](/home/jehayes/sh_final/SWEet-InSAR/images/insar_diagram.jpg)\n",
+    "![InSAR Diagram](images/insar_diagram.jpg)\n",
     "\n",
     "The process begins with the acquisition of two radar images, commonly referred to as a \"master\" and \"slave\" images (but let's refer to them as a \"source\" image and a \"second\" image), taken from essentially the same position in a satellite's orbit at different times. These images are compared to generate an **interferogram**, which captures the phase differences between the two radar signals. When the radar waves are reflected back to the sensor, they carry information about the distance between the satellite and the surface below. \n",
     "\n",
