cleanup insar nb

--- a/notebooks/01_OPERA_phase_unwrap.ipynb
+++ b/notebooks/01_OPERA_phase_unwrap.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "**Interferometric Synthetic Aperture Radar (InSAR)** is a remote sensing technique that measures surface displacement by analyzing the phase difference between two radar images of the same area. These images are collected at different times using radar sensors on satellites. The fundamental idea behind InSAR is that the phase difference between corresponding pixels in two SAR images contains information about the movement of the Earth's surface in the line-of-sight direction of the radar sensor.\n",
     "\n",
-    "![InSAR Diagram](images/insar_diagram.jpg)\n",
+    "![InSAR Diagram](../images/insar_diagram.jpg)\n",
     "\n",
     "The process begins with the acquisition of two radar images, commonly referred to as a \"master\" and \"slave\" images (but let's refer to them as a \"source\" image and a \"second\" image), taken from essentially the same position in a satellite's orbit at different times. These images are compared to generate an **interferogram**, which captures the phase differences between the two radar signals. When the radar waves are reflected back to the sensor, they carry information about the distance between the satellite and the surface below. \n",
     "\n",
@@ -56,9 +56,8 @@
     "\n",
     "In **InSAR**, the phase difference directly corresponds to **surface displacement**. This displacement, particularly in the **line-of-sight** direction of the sensor, is encoded in the wrapped phase. By **unwrapping** the phase, we can obtain continuous measurements of surface motion over a region, which is essential for monitoring phenomena such as **earthquakes**, **land subsidence**, and **volcanic activity** (and in our case, snow water equivalent). Unwrapping involves converting the wrapped phase (with values between -π and π) into a continuous map that reflects the true displacement, but more on that later in this notebook.\n",
     "\n",
-    "```{note}\n",
-    "Coregistration, the process of aligning two radar images so that they match perfectly in space, is a crucial step in InSAR. However, we are using NASA's OPERA CSLC (Coregistered SLC) products, which have already undergone this process, so we will skip this step. For more information on coregistration and its importance, check out this https://www.gamma-rs.ch/uploads/media/2002-4_PhaseUnwrapping.pdf.\n",
-    "```"
+    "> [!NOTE]  \n",
+    "> Coregistration, the process of aligning two radar images so that they match perfectly in space, is a crucial step in InSAR. However, we are using NASA's OPERA CSLC (Coregistered SLC) products, which have already undergone this process, so we will skip this step. For more information on coregistration and its importance, check out this https://www.gamma-rs.ch/uploads/media/2002-4_PhaseUnwrapping.pdf."
    ]
   },
   {
@@ -507,6 +506,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Topographic Phase and Its Removal\n",
+    "\n",
+    "When generating an InSAR interferogram, one of the key contributors to the observed phase difference is the **topography** of the surface being observed. $\\varphi_{\\text{topography}}$ arises due to the variation in the elevation of the surface, which causes different radar signal paths to have different lengths. In simple terms, higher elevations increase the distance between the radar and the surface, while lower elevations reduce it. These differences create phase shifts that are purely due to topographical features, not due to any deformation or displacement of the surface.\n",
+    "\n",
+    "The topographic phase is a common artifact in InSAR measurements because it distorts the true surface displacement signal. Without removing it, we would not be able to distinguish between actual displacement (such as due to land subsidence or earthquakes) and phase shifts that are simply caused by changes in surface elevation.\n",
+    "\n",
+    "To isolate the true deformation signal, we need to **subtract the topographic phase**. This is typically done by using a reference Digital Elevation Model (DEM). The DEM provides a detailed map of the surface elevation and allows us to calculate the phase contribution due to topography at each point in the radar image. Once this topographic phase is modeled, it can be subtracted from the interferogram, leaving us with a phase signal that better represents the surface displacement (plus any residual errors, such as atmospheric phase shifts or noise).\n",
+    "\n",
+    "The process works as follows:\n",
+    "\n",
+    "1. **Generate the topographic phase**: Using the reference DEM, calculate the expected phase shift at each pixel based on the elevation.\n",
+    "$$\n",
+    "\\varphi_{\\text{topography}} = \\left( \\frac{\\lambda}{4 \\pi} \\right) \\times \\left( \\frac{h}{R} \\right)\n",
+    "$$\n",
+    "- **$\\lambda$**: Wavelength of the radar signal (in meters).\n",
+    "- **$4\\pi$**: Constant factor used in the formula for calculating the topographic phase.\n",
+    "- **$h$**: Elevation of the surface from the Digital Elevation Model (DEM) (in meters).\n",
+    "- **$R$**: Radar line-of-sight distance from the sensor to the surface (in meters).\n",
+    "2. **Subtract the topographic phase**: Remove the calculated topographic phase from the interferogram, which leaves a phase signal primarily due to displacement.\n",
+    "\n",
+    "In our case, our reference DEM is the Copernicus 30 GLO-DEM at 30m spatial resolution due to ease of access.\n",
+    "\n",
+    "This is done before unwrapping our phase since $\\varphi_{\\text{topography}}$ is itself a phase term expressed in radians and thus behaves the same way as the wrapped phase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create search polygon from bounds of SAR images so we can pull in our cop30 data\n",
+    "polygon = box(*ds.rio.bounds())\n",
+    "gs_search = gpd.GeoSeries([polygon], crs=\"EPSG:32612\")\n",
+    "gs_search_wgs84 = gs_search.to_crs(\"EPSG:4326\")\n",
+    "gf_search_fn = \"/home/jehayes/sh_final/SWEet-InSAR/data/search_bbox.geojson\"\n",
+    "gs_search_wgs84.to_file(gf_search_fn,\n",
+    "                        driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crs_utm = 'EPSG:32613'\n",
+    "cop30_dem_fn = '/home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30.tif'\n",
+    "! /home/jehayes/finesst_24/fetch_dem/download_global_DEM.py -demtype COP30_E -vector_fn $gf_search_fn -out_proj $crs_utm -out_fn $cop30_dem_fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with rasterio.open(cop30_dem_fn) as cop30_src:\n",
+    "    arr_cop30 = cop30_src.read(1)  # Read the DEM data as a NumPy array\n",
+    "    cop30_transform = cop30_src.transform  # Affine transform for georeferencing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the topographic phase\n",
+    "# The formula for topographic phase is: phase_topo = (4 * pi / wavelength) * (h / R)\n",
+    "# where h is the elevation from the DEM and R is the radar line-of-sight distance\n",
+    "# For simplicity, assume R is constant or use a simplified model\n",
+    "R = 1  # Simplified radar line-of-sight distance (arbitrary value for simplicity)\n",
+    "# Calculate the topographic phase (assuming R = 1)\n",
+    "wavelength = 0.056  # Sentinel-1 wavelength in m\n",
+    "topographic_phase = (4 * np.pi / wavelength) * (arr_cop30 / R)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### The phase difference between two corresponding pixels is measured modulo 2π, resulting in a wrapped phase that ranges from -π to π. This wrapping occurs because the phase is inherently periodic; a phase difference of 2π corresponds to a full cycle, and any phase difference beyond this is indistinguishable from a smaller value within the -π to π range. Storing phase within this range simplifies the measurement process and ensures that phase differences are consistently represented.\n",
     "\n",
     "To actually get an interpretable deformation measurement, we neep to 'unwrap' the phase to obtain a continuous phase map. This involves integrating the phase differences between neighboring pixels. The unwrapped phase φ_unwrapped at a pixel (i, j) is given by:\n",
@@ -538,146 +619,6 @@
     "# NOTE: the above took 90+ minutes and still didnt finish. I'm really trying to find the best\n",
     "# way to do this with OPERA CLSCs but am stuck for now. Ideally, I would use hyp3-isce2 but\n",
     "# I'm still learning that software"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Topographic Phase and Its Removal\n",
-    "\n",
-    "When generating an InSAR interferogram, one of the key contributors to the observed phase difference is the **topography** of the surface being observed. $\\varphi_{\\text{topography}}$ arises due to the variation in the elevation of the surface, which causes different radar signal paths to have different lengths. In simple terms, higher elevations increase the distance between the radar and the surface, while lower elevations reduce it. These differences create phase shifts that are purely due to topographical features, not due to any deformation or displacement of the surface.\n",
-    "\n",
-    "The topographic phase is a common artifact in InSAR measurements because it distorts the true surface displacement signal. Without removing it, we would not be able to distinguish between actual displacement (such as due to land subsidence or earthquakes) and phase shifts that are simply caused by changes in surface elevation.\n",
-    "\n",
-    "To isolate the true deformation signal, we need to **subtract the topographic phase**. This is typically done by using a reference Digital Elevation Model (DEM). The DEM provides a detailed map of the surface elevation and allows us to calculate the phase contribution due to topography at each point in the radar image. Once this topographic phase is modeled, it can be subtracted from the interferogram, leaving us with a phase signal that better represents the surface displacement (plus any residual errors, such as atmospheric phase shifts or noise).\n",
-    "\n",
-    "The process works as follows:\n",
-    "\n",
-    "1. **Generate the topographic phase**: Using the reference DEM, calculate the expected phase shift at each pixel based on the elevation.\n",
-    "$$\n",
-    "\\varphi_{\\text{topography}} = \\left( \\frac{\\lambda}{4 \\pi} \\right) \\times \\left( \\frac{h}{R} \\right)\n",
-    "$$\n",
-    "- **$\\lambda$**: Wavelength of the radar signal (in meters).\n",
-    "- **$4\\pi$**: Constant factor used in the formula for calculating the topographic phase.\n",
-    "- **$h$**: Elevation of the surface from the Digital Elevation Model (DEM) (in meters).\n",
-    "- **$R$**: Radar line-of-sight distance from the sensor to the surface (in meters).\n",
-    "2. **Subtract the topographic phase**: Remove the calculated topographic phase from the interferogram, which leaves a phase signal primarily due to displacement.\n",
-    "\n",
-    "In our case, our reference DEM is the Copernicus 30 GLO-DEM at 30m spatial resolution due to ease of access.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create search polygon from bounds of SAR images so we can pull in our cop30 data\n",
-    "polygon = box(*ds.rio.bounds())\n",
-    "gs_search = gpd.GeoSeries([polygon], crs=\"EPSG:32612\")\n",
-    "gs_search_wgs84 = gs_search.to_crs(\"EPSG:4326\")\n",
-    "gf_search_fn = \"/home/jehayes/sh_final/SWEet-InSAR/data/search_bbox.geojson\"\n",
-    "gs_search_wgs84.to_file(gf_search_fn,\n",
-    "                        driver=\"GeoJSON\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-108.57460476752439, 37.60886943067259, -107.38338629141069, 38.08366939084583]\n",
-      "Ellipsoidal versions of COP30 is not provided automatically...\n",
-      "Will perform vertical datum adjustment downstream.....\n",
-      "https://portal.opentopography.org/API/globaldem?demtype=COP30&west=-108.57460476752439&south=37.60886943067259&east=-107.38338629141069&north=38.08366939084583&outputFormat=GTiff&API_Key=demoapikeyot2022\n",
-      "OK!\n",
-      "gdal_edit.py /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30_temp.tif -a_nodata -9999  -ro\n",
-      "Child returned 0\n",
-      "/home/jehayes/mambaforge/envs/coincident/bin/gdalwarp -r cubic -co COMPRESS=LZW -co TILED=YES -co BIGTIFF=IF_SAFER -s_srs 'EPSG:4326+EPSG:3855' -t_srs 'EPSG:32613+EPSG:4979' /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30_temp.tif /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30.tif\n",
-      "/home/jehayes/mambaforge/envs/coincident/bin/gdalwarp -r cubic -co COMPRESS=LZW -co TILED=YES -co BIGTIFF=IF_SAFER -s_srs 'EPSG:4326+EPSG:3855' -t_srs 'EPSG:32613+EPSG:4979' /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30_temp.tif /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30.tif\n",
-      "Creating output file that is 4188P x 2204L.\n",
-      "Using internal nodata values (e.g. -9999) for image /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30_temp.tif.\n",
-      "Copying nodata values from source /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30_temp.tif to destination /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30.tif.\n",
-      "Processing /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30_temp.tif [1/1] : 0...10...20...30...40...50...60...70...80...90...100 - done.\n",
-      "Child returned 0\n",
-      "/home/jehayes/mambaforge/envs/coincident/bin/gdal_edit.py /home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30.tif -a_srs EPSG:32613+EPSG:4979\n",
-      "Child returned 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "crs_utm = 'EPSG:32613'\n",
-    "cop30_dem_fn = '/home/jehayes/sh_final/SWEet-InSAR/data/asc_cop30.tif'\n",
-    "! /home/jehayes/finesst_24/fetch_dem/download_global_DEM.py -demtype COP30_E -vector_fn $gf_search_fn -out_proj $crs_utm -out_fn $cop30_dem_fn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with rasterio.open(cop30_dem_fn) as cop30_src:\n",
-    "    arr_cop30 = cop30_src.read(1)  # Read the DEM data as a NumPy array\n",
-    "    cop30_transform = cop30_src.transform  # Affine transform for georeferencing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mnotebook controller is DISPOSED. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate the topographic phase\n",
-    "# The formula for topographic phase is: phase_topo = (4 * pi / wavelength) * (h / R)\n",
-    "# where h is the elevation from the DEM and R is the radar line-of-sight distance\n",
-    "# For simplicity, assume R is constant or use a simplified model\n",
-    "R = 1  # Simplified radar line-of-sight distance (arbitrary value for simplicity)\n",
-    "# Calculate the topographic phase (assuming R = 1)\n",
-    "topographic_phase = (4 * np.pi / wavelength) * (arr_cop30 / R)\n",
-    "\n",
-    "# Subtract the topographic phase from the unwrapped phase\n",
-    "# Ensure the topographic phase is aligned with the unwrapped phase\n",
-    "displacement_phase = unwrapped_phase - topographic_phase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert the displacement phase to displacement (in meters)\n",
-    "displacement = (wavelength / (4 * np.pi)) * displacement_phase\n",
-    "displacement_da = xr.DataArray(displacement,\n",
-    "                               dims=ds['phase'].dims,\n",
-    "                               coords=ds['phase'].coords,\n",
-    "                               name=\"displacement\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "displacement_da.plot(cmap='RdBu')\n",
-    "plt.title(\"Surface Displacement (m)\");"
    ]
   }
  ],
